[package]
name = "fm"
version = "0.1.0"
edition = "2021"
description = "A simple file manager"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Apfelfrosch/fm"

[dependencies]
crossterm = "0.27.0"
ratatui = "0.25.0"

[profile.release]
codegen-units = 1
lto = "fat"
